# cassava-leaf-disease-detector

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  commands.py  mlflow.db  pyproject.toml
.dvc/: config
cassava_detector/: __init__.py
cassava_detector/data/: __init__.py  datamodule.py  download.py  preprocess.py
cassava_detector/inference/: predict.py
cassava_detector/model/: classifier.py
cassava_detector/training/: __init__.py  trainer.py
cassava_detector/utils/: __init__.py  plotting.py
configs/: config.yaml  mlflow.yaml  preprocessing.yaml
configs/mlflow/: mlflow.yaml
configs/model/: default.yaml  efficientnetv2_b0.yaml  mobilevit_s.yaml  swinv2_tiny.yaml
configs/training/: training.yaml
data/: processed.dvc  raw.dvc
scripts/: download_and_preprocess.sbatch  generate_comparison.sh  train_sweep.sbatch
tests/: __init__.py  test_datamodule.py  test_metrics.py
